# Varda

./: .gitignore  .pylintrc  CLAUDE.md  README.md  Varda.spec  environment.yml  main.spec  main_gui.py  notes  pyproject.toml  requirements-dev.txt  requirements.txt  scat.py  varda_feature_based_architecture.md  varda_feature_example.md  varda_migration_guide.md  varda_projectcontext_refactoring.md
.claude/: settings.json
.github/workflows/: PR_Checks.yml
.junie/: guidelines.md
.run/: main.run.xml  tests.run.xml  varda.main.run.xml
SpecLab/: README.md  SpectralDataViewer.py  environment.yml  main.py  main.spec  setup.py
SpecLab-GUI-Hamad/src/: setup.py
SpecLab-GUI-Hamad/src/speclabgui/: __init__.py
SpecLab-GUI-Hamad/src/speclabimageprocessing/: spectralimage.py
SpecLab-main/: .gitignore  main.spec  requirements.txt  scat.py
SpecLab-main/SpecLab_Tests/: testbackend.py
SpecLab-main/src/: main.py
SpecLab-main/src/speclabgui/: maingui.py
SpecLab-main/src/speclabimageprocessing/: hdf5image.py  metadata.py
SpecLab/gui/: SpectralDataViewer.py  SplitterTest.py  main_gui.py
SpecLab/gui/CustomWidgets/: BasicWidget.py  SpectralImageDisplay.py  __init__.py
SpecLab/gui/customwidgets/: __init__.py  basicwidget.py  file_explorer.py  specimagedisplay.py  textwidget.py
SpecLab/resources/: style.qss
SpecLab/src/speclabgui/: maingui.py
SpecLab_Tests/: metadatatest.py
Varda_Tests/: testImageModel.py  testbackend.py  testeditablelistview.py  testeditablelistviewGUI.py  testimageloading.py
_tests/: conftest.py
src/: debug.py  main.py  new_workspace_dialog.py  practice.py  projectmanager.py  test_fo.py  vardaproject.py  vardathreading.py
src/__decorator_testing/: decorators.py
src/_experiments/: dependency_injection.py  parameter_tree_testing.py  pyqtgraph_examples.py  spatialimageitemthing.py
src/api/: __init__.py
src/core/: __init__.py
src/core/data/: __init__.py  project_context.py  projectcontext.py  roi_manager.py
src/core/entities/: ImageModel.py  __init__.py  band.py  freehandROI.py  geo_referencer.py  image.py  metadata.py  plot.py  stretch.py
src/core/roi/: roi_manager.py
src/core/stretch/: __init__.py  (+2 more)
src/features/: roi_statistics.py
src/gui/: SpectralDataViewer.py  __init__.py  imageloadingmanager.py  main_gui.py  maingui.py  projectmanager.py
src/imageloaders/: __init__.py  abstractimageloader.py  enviimageloader.py  hdf5imageloader.py
src/imageprocessing/: ImageLoader.py  __init__.py  anotherprocess.py  enviimage.py  hdf5image.py  image.py  imageprocess.py  makeimagegood.py  normalize.py
src/imagetypes/: __init__.py  enviimage.py  hdf5image.py  image.py  imageloader.py
src/models/: __init__.py  abstractimagemodel.py  enviimage.py  hdf5image.py  imagedatatype.py  imagelistmodel.py  imageloader.py  imagemanager.py  imagemodel.py  imageviewselectionmodel.py  listmodel.py  metadata.py  observablelist.py  parametermodel.py  tablemodel.py
src/resources/: style.qss
src/speclabgui/: maingui.py
src/speclabimageprocessing/: ImageProcess.py  __init__.py  enviimage.py  hdf5image.py  hdrimage.py  image.py  imageloader.py  imageprocess.py  metadata.py  neonimage.py  normalize.py  spectralimage.py
src/utilities/: savesystem.py  vardathreading.py
src/varda/: __init__.py  app.py  app_model.py  data.py  log.py  logger.py  main.py  main_menu_bar.py  maingui.py  new_workspace_dialog.py  newmaingui.py  varda_app.py  varda_application.py
src/varda/vectroscopy/: pyproject.toml
tests/: testImageModel.py  test_load_image.py  testeditablelistview.py  testeditablelistviewGUI.py  testimageloading.py
tests/test_core/: test_entities.py  test_image_loaders.py  test_project_context.py
tests/test_features/: test_image_view_stretch.py  test_load_image.py
(+597 files in other folders)
