[project]
name = "varda"
version = "0.0.1"
description = "An extensible GUI application for analyzing hyperspectral images."
readme = "README.md"
requires-python = ">=3.12"
authors = [{"name" = "Michael Phillips", "email" = "phillipsm@arizona.edu"},
           {"name" = "Jesse Oved", "email" = "jesseoved@arizona.edu"},
           {"name" = "Emma Elliott", "email" = "emmae@arizona.edu"},
           {"name" = "Hamad Ayaz", "email" = "hamadayaz@arizona.edu"}]

dependencies = [
    "PyQt6>=6.7.1 ; sys_platform != 'linux'", # linux users probably want to install pyqt6 to their system via their package manager and use that. So that any system themes are applied."
    "numpy>=2.1.1",
    "matplotlib>=3.9.2",
    "spectral>=0.23.1",
    "rasterio>=1.4.0",
    "scikit-image>=0.21.0",
    "pyqtgraph>=0.13.7",
    "h5py>=3.15.1",
    "opencv-python>=4.10.0.84",
    "affine>=2.4.0",
    "scipy>=1.15.1",
    "pillow>=10.1.0",
    "pyproj>=3.7.1",
    "pluggy>=1.6.0",
    "appdirs>=1.4.4",
    "pyogrio>=0.11.1",
    "geopandas>=1.1.1",
    "pydantic>=2.11.7",
    "numpydantic>=1.6.11",
    "attrs>=25.4.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "ruff>=0.14.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.gui-scripts]
varda = "varda.main:main"

[project.entry-points."varda.plugins"]

[tool.pytest.ini_options]
pythonpath = ["varda"]
testpaths = ["tests"]

[tool.black]
line-length = 90

[tool.mypy]
disable_error_code = ["import-untyped"]
