[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vectroscopy"
version = "0.1.0"

dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "rasterio",
    "scipy",
    "geopandas",
    "affine",
    "exactextract",
    "dask",
    "scikit-image",
    "pyyaml",
    "psutil",
    "bottleneck",
    "tqdm",
    "pyproj"
]
